--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   <body>
     <div class="container-fluid">
       <div class="row text-center">
-        <img src="img/profile_pic.jpg" width="200" class="profile-pic" />
+        <img src="https://avatars.githubusercontent.com/u/17446181" width="200" class="profile-pic" />
         <h1>Abdul Noushad Sheikh</h1>
         <h3>Full Stack Developer</h3>
         <!-- <h5 style="margin:10px">
