Added meta tags and google analytics

--- a/index.html
+++ b/index.html
@@ -1,12 +1,46 @@
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Abdul's CLI</title>
   <link rel="stylesheet/less" type="text/css" href="styles/main.less" />
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.2/less.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/1.4.3/js/jquery.terminal.js"></script>
   <script type="text/javascript" src="js/shell.js"></script>
   <script type="text/javascript" src="js/cli.js"></script>
+
+  <!-- Meta tags start-->
+  <meta content="yes" name="apple-mobile-web-app-capable">
+  <meta content="black-translucent" name="apple-mobile-web-app-status-bar-style">
+  <link href="favicon.ico" rel="shortcut icon">
+  <meta content="https://avatars.githubusercontent.com/u/17446181" property="og:image">
+  <meta content="Abdul's CLI" property="og:title">
+  <meta content="abdul.co.in" property="og:site_name">
+  <meta content="http://www.abdul.co.in/" property="og:url">
+  <meta content="Abdul's Command Line Interface">
+  <meta content="Abdul's Command Line Interface">
+  <meta content="Abdul Noushad Sheikh"name="author">
+  <meta content="Abdul Noushad Sheikh" name="copyright">
+  <!-- Meta tags end -->
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-135127723-3"></script>
+  <script>
+    if (location.hostname != "localhost") {
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "UA-135127723-3");
+    } else {
+      console.log("dev mode detected, don't track view");
+    }
+  </script>
+  <!-- Google Analytics end -->
+
 </head>
 
 <body>
@@ -32,7 +66,7 @@
 
 <div class="footer">
   <p> Made with ❤️ & ☕</p><br>
-  <p>Frontend can be found <a class="site-code" href="frontend/">here</a></p>
+  <p>If you are looking for pretty website <a class="site-code" href="frontend/">click here</a></p>
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.js"></script>
