--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Abdul's CLI</title>
   <link rel="stylesheet/less" type="text/css" href="styles/main.less" />
+  <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Ubuntu" />
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.2/less.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/1.4.3/js/jquery.terminal.js"></script>
@@ -66,7 +67,7 @@
 
 <div class="footer">
   <p> Made with ❤️ & ☕</p><br>
-  <p>If you are looking for pretty website <a class="site-code" href="frontend/">click here</a></p>
+  <p>For pretty website <a class="site-code" href="frontend/">click here</a></p>
 </div>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0/jquery.js"></script>
