--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/less.js/2.7.2/less.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/1.4.3/js/jquery.terminal.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css"> 
   <script type="text/javascript" src="js/shell.js"></script>
   <script type="text/javascript" src="js/cli.js"></script>
 
@@ -64,6 +65,15 @@
       </p>
   </div>
 </div>
+
+<!-- <div class="pretty-window" hidden>
+  <header hidden>
+    <div class="button red"></div>
+    <div class="button yellow"></div>
+    <div class="button green"></div>
+  </header>
+
+</div> -->
 
 <div class="footer">
   <p> Made with ❤️ & ☕</p><br>
