--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,22 +1,22 @@
 <ul class='contact'>
   <li>
-    <a class='blue' target='_blank' href='https://github.com/abdulnine7'>
-      GitHub
+    <a class='title-link' target='_blank' href='https://github.com/abdulnine7'>
+      GitHub <i class="devicon-github-original"></i>
     </a>
   </li>
   <li>
-    <a class='blue' target='_blank' href='https://www.linkedin.com/in/abdulnine7'>
-      LinkedIn
+    <a class='title-link' target='_blank' href='https://www.linkedin.com/in/abdulnine7'>
+      LinkedIn  <i class="devicon-linkedin-plain"></i>
     </a>
   </li>
   <li>
-    <a class='blue' target='_blank' href='https://www.instagram.com/abdul_codes/'>
-      Instagram
+    <a class='title-link' target='_blank' href='https://www.instagram.com/abdul_codes/'>
+      Instagram  <i class="devicon-facebook-plain"></i>
     </a>
   </li>
   <li>
-    <a class='blue' target='_blank' href='mailto:me@abdul.co.in'>
-      Email
+    <a class='title-link' target='_blank' href='mailto:me@abdul.co.in'>
+      Email  <i class="devicon-ie10-original"></i>
     </a>
   </li>
 </ul>
