--- a/pages/familiar.html
+++ b/pages/familiar.html
@@ -1,4 +1,14 @@
-<ul>
-  <li>Android development</li>
-  <li>AngularJS 2</li>
-</ul>
+<table>
+	<tbody>
+		<tr>
+			<td>
+			<div>Android development &nbsp</div>
+			</td>
+			<td><i class="devicon-android-plain"></i></td>
+		</tr>
+		<tr>
+			<td>AngularJS</td>
+			<td><i class="devicon-angularjs-plain"></i></td>
+		</tr>
+	</tbody>
+</table>
