--- a/pages/proficient.html
+++ b/pages/proficient.html
@@ -1,15 +1,52 @@
-<ul>
-  <li>Javascript</li>
-  <li>Java</li>
-  <li>Python</li>
-  <li>HTML5/CSS3</li>
-  <li>Bash</li>
-</ul>
-
-<ul>
-  <li>Docker</li>
-  <li>Git</li>
-  <li>Django</li>
-  <li>Azure</li>
-  <li>AWS</li>
-</ul>
+<table>
+	<tbody>
+		<tr>
+			<td>
+			<div>JavaScript</div>
+			</td>
+			<td><i class="devicon-javascript-plain"></i></td>
+		</tr>
+		<tr>
+			<td>Java</td>
+			<td><i class="devicon-java-plain"></i></td>
+		</tr>
+		<tr>
+			<td>Python</td>
+			<td><i class="devicon-python-plain"></i></td>
+		</tr>
+		<tr>
+			<td>HTML5/CSS3</td>
+			<td><i class="devicon-html5-plain"></i></td>
+		</tr>
+		<tr>
+			<td>Linux Shell</td>
+			<td><i class="devicon-linux-plain"></i> <br><br></td>
+		</tr>
+		<tr>
+			<td>
+			<div>Docker</div>
+			</td>
+			<td><i class="devicon-docker-plain"></i></td>
+		</tr>
+		<tr>
+			<td>Git</td>
+			<td><i class="devicon-git-plain"></i></td>
+		</tr>
+		<tr>
+			<td>Django</td>
+			<td><i class="devicon-django-plain"></i></td>
+		</tr>
+		<tr>
+			<td>NodeJS</td>
+			<td><i class="devicon-nodejs-plain"></i></td>
+		</tr>
+		<tr>
+			<td>Azure</td>
+			<td><i class="devicon-azure-plain"></i></td>
+		</tr>
+		<tr>
+			<td>Amazon Web Services &nbsp&nbsp</td>
+			<td><i class="devicon-amazonwebservices-plain"></i></td>
+		</tr>
+	</tbody>
+</table>
