--- a/pages/projects.html
+++ b/pages/projects.html
@@ -1,13 +1,13 @@
 <p>
   <strong>
-    <a class='project-title' target='_blank' href='https://jobsexplorer.in/'> JobsExplorer.in </a>
+    <a class='title-link' target='_blank' href='https://jobsexplorer.in/'> JobsExplorer.in </a>
   </strong>
   Designed a simple web app built to quickly find jobs in India. search keywords and locationto find job listings from 3 of the most popular job sites in India. I built JobsExplorer to help people search their desired jobs with ease and clarity. <br>
   <strong>Tech:</strong> NodeJS, Amazon Web Services, JQuery, NGiNX
   <br><br>
   
   <strong style="padding-bottom: 2px;">
-    <a class='project-title' target='_blank' href='https://unishare.in/'> UNI Share.in </a>
+    <a class='title-link' target='_blank' href='https://unishare.in/'> UNI Share.in </a>
   </strong>
   Created a web application to help students share their books, projects and other academic related stuff with each others in a University Campus. In short, It's a University OLX.  <br>
   <strong>Tech:</strong> Django, Amazon Web Services, Python, NGiNX, RDBMS
