--- a/pages/resume.html
+++ b/pages/resume.html
@@ -1,3 +1,3 @@
-<a class='blue' target='_blank' href='data/Resume_Dec_2021.pdf'>
+<a class='title-link' target='_blank' href='data/Resume_Dec_2021.pdf'>
   View My Resume
 </a>
