added sudo meme

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <span class="root">root</span>
           <span class="tick">❯</span>
         </span>
-        <span contenteditable="true" spellcheck="false" id="input" class="input"></span>
+        <span contenteditable="true" spellcheck="false" autocomplete="off" autocorrect="off" class="input"> </span>
       </p>
   </div>
 </div>
