changed directory prompt

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.terminal/1.4.3/js/jquery.terminal.js"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.14.0/devicon.min.css"> 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css" integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous">
   <script type="text/javascript" src="js/shell.js"></script>
   <script type="text/javascript" src="js/cli.js"></script>
 
@@ -56,13 +57,15 @@
   <div id="terminal">
     <p><strong class="green">\[._.]/</strong> - you're in abdul's cli! type `help` to get started.</p>
     <div class="loginInfo"></div>
-      <p class="hidden">
-        <span class="prompt">
-          <span class="root">root</span>
-          <span class="tick">❯</span>
-        </span>
-        <span contenteditable="true" spellcheck="false" autocomplete="off" autocorrect="off" class="input"> </span>
-      </p>
+    <p class="hidden">
+      <span class="prompt">
+        <strong class="home">abdul@notebook-HP</strong>
+        <strong class="white">:</strong>
+        <strong class="dir">~</strong>
+        <strong class="white">$</strong>
+      </span>
+      <span contenteditable="true" spellcheck="false" autocomplete="off" autocorrect="off" class="input"> </span>
+    </p>
   </div>
 </div>
 
