--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,4 +1,4 @@
-<ul class='contact'>
+<!-- <ul class='contact'>
   <li>
     <a class='title-link' target='_blank' href='https://github.com/abdulnine7'>
       GitHub <i class="devicon-github-original"></i>
@@ -19,4 +19,34 @@
       Email  <i class="devicon-ie10-original"></i>
     </a>
   </li>
-</ul>
+</ul> -->
+
+<table>
+	<tbody>
+		<tr>
+			<td><i class="devicon-github-original"></i>&nbsp&nbsp</td>
+			<td>
+			<a class='title-link' target='_blank' href='https://github.com/abdulnine7'>GitHub</a>
+			</td>
+		</tr>
+		<tr>
+			<td><i class="devicon-linkedin-plain colored"></i></td>
+			<td>
+			<a class='title-link' target='_blank' href='https://www.linkedin.com/in/abdulnine7'>LinkedIn</a>
+			</td>
+		</tr>
+		<tr>
+      <td><i class="fa-solid fa-hashtag insta"></i></td>
+			<td>
+			<a class='title-link' target='_blank' href='https://www.instagram.com/abdul_codes/'>Instagram</a>
+			</td>
+		</tr>
+		<tr>
+			<td><i class="fa-solid fa-at green"></i></td>
+			<td>
+			<a class='title-link' target='_blank' href='mailto:me@abdul.co.in'>Email</a>
+			</td>
+		</tr>
+
+	</tbody>
+</table>
