styled to ubuntu terminal

--- a/index.html
+++ b/index.html
@@ -79,7 +79,11 @@
 </div> -->
 
 <div class="footer">
-  <p> Made with ❤️ & ☕</p><br>
+  <p> Made with ❤️ & ☕</p>
+  <p> Inspired by Ubuntu Terminal 
+    <i class="devicon-linux-plain" style="font-size: 20;"></i>
+  </p>
+  <br>
   <p>For pretty website <a class="site-code" href="frontend/">click here</a></p>
 </div>
 
