--- a/pages/familiar.html
+++ b/pages/familiar.html
@@ -1,14 +1,12 @@
 <table>
 	<tbody>
 		<tr>
-			<td>
-			<div>Android development &nbsp</div>
-			</td>
-			<td><i class="devicon-android-plain"></i></td>
+			<td><i class="devicon-android-plain colored"></i> &nbsp&nbsp</td>
+			<td>Android development</td>
 		</tr>
 		<tr>
+			<td><i class="devicon-angularjs-plain colored"></i></td>
 			<td>AngularJS</td>
-			<td><i class="devicon-angularjs-plain"></i></td>
 		</tr>
 	</tbody>
 </table>
