--- a/pages/proficient.html
+++ b/pages/proficient.html
@@ -1,52 +1,48 @@
 <table>
 	<tbody>
 		<tr>
-			<td>
-			<div>JavaScript</div>
-			</td>
-			<td><i class="devicon-javascript-plain"></i></td>
+			<td><i class="devicon-javascript-plain colored"></i>&nbsp&nbsp</td>
+			<td>JavaScript</td>
 		</tr>
 		<tr>
+			<td><i class="devicon-java-plain colored"></i></td>
 			<td>Java</td>
-			<td><i class="devicon-java-plain"></i></td>
 		</tr>
 		<tr>
+			<td><i class="devicon-python-plain colored"></i></td>
 			<td>Python</td>
-			<td><i class="devicon-python-plain"></i></td>
 		</tr>
 		<tr>
+			<td><i class="devicon-html5-plain colored"></i></td>
 			<td>HTML5/CSS3</td>
-			<td><i class="devicon-html5-plain"></i></td>
 		</tr>
 		<tr>
-			<td>Linux Shell</td>
 			<td><i class="devicon-linux-plain"></i> <br><br></td>
+			<td>Linux Shell</td>
 		</tr>
 		<tr>
-			<td>
-			<div>Docker</div>
-			</td>
-			<td><i class="devicon-docker-plain"></i></td>
+			<td><i class="devicon-docker-plain colored"></i></td>
+			<td>Docker</td>
 		</tr>
 		<tr>
+			<td><i class="devicon-git-plain colored"></i></td>
 			<td>Git</td>
-			<td><i class="devicon-git-plain"></i></td>
 		</tr>
 		<tr>
-			<td>Django</td>
 			<td><i class="devicon-django-plain"></i></td>
+			<td>Django</td>
 		</tr>
 		<tr>
+			<td><i class="devicon-nodejs-plain colored"></i></td>
 			<td>NodeJS</td>
-			<td><i class="devicon-nodejs-plain"></i></td>
 		</tr>
 		<tr>
+			<td><i class="devicon-azure-plain colored"></i></td>
 			<td>Azure</td>
-			<td><i class="devicon-azure-plain"></i></td>
 		</tr>
 		<tr>
-			<td>Amazon Web Services &nbsp&nbsp</td>
-			<td><i class="devicon-amazonwebservices-plain"></i></td>
+			<td><i class="devicon-amazonwebservices-plain colored"></i></td>
+			<td>Amazon Web Services</td>
 		</tr>
 	</tbody>
 </table>
