--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,26 +1,3 @@
-<!-- <ul class='contact'>
-  <li>
-    <a class='title-link' target='_blank' href='https://github.com/abdulnine7'>
-      GitHub <i class="devicon-github-original"></i>
-    </a>
-  </li>
-  <li>
-    <a class='title-link' target='_blank' href='https://www.linkedin.com/in/abdulnine7'>
-      LinkedIn  <i class="devicon-linkedin-plain"></i>
-    </a>
-  </li>
-  <li>
-    <a class='title-link' target='_blank' href='https://www.instagram.com/abdul_codes/'>
-      Instagram  <i class="devicon-facebook-plain"></i>
-    </a>
-  </li>
-  <li>
-    <a class='title-link' target='_blank' href='mailto:me@abdul.co.in'>
-      Email  <i class="devicon-ie10-original"></i>
-    </a>
-  </li>
-</ul> -->
-
 <table>
 	<tbody>
 		<tr>
@@ -28,23 +5,35 @@
 			<td>
 			<a class='title-link' target='_blank' href='https://github.com/abdulnine7'>GitHub</a>
 			</td>
+			<td>
+			<a class='title-link' target='_blank' href='https://github.com/abdulnine7'>abdulnine7</a>
+			</td>
 		</tr>
 		<tr>
 			<td><i class="devicon-linkedin-plain colored"></i></td>
 			<td>
 			<a class='title-link' target='_blank' href='https://www.linkedin.com/in/abdulnine7'>LinkedIn</a>
 			</td>
+			<td>
+			<a class='title-link' target='_blank' href='https://www.linkedin.com/in/abdulnine7'>abdulnine7</a>
+			</td>
 		</tr>
 		<tr>
       <td><i class="fa-solid fa-hashtag insta"></i></td>
 			<td>
-			<a class='title-link' target='_blank' href='https://www.instagram.com/abdul_codes/'>Instagram</a>
+			<a class='title-link' target='_blank' href='https://www.instagram.com/abdul_codes/'>Instagram &nbsp&nbsp</a>
+			</td>
+			<td>
+			<a class='title-link' target='_blank' href='https://www.instagram.com/abdul_codes/'>abdul_codes</a>
 			</td>
 		</tr>
 		<tr>
 			<td><i class="fa-solid fa-at green"></i></td>
 			<td>
 			<a class='title-link' target='_blank' href='mailto:me@abdul.co.in'>Email</a>
+			</td>
+			<td>
+			<a class='title-link' target='_blank' href='mailto:me@abdul.co.in'>me@abdul.co.in</a>
 			</td>
 		</tr>
 
