--- a/index.html
+++ b/index.html
@@ -50,9 +50,15 @@
 
 <div class="terminal-window">
   <header>
-    <div class="button red"></div>
-    <div class="button yellow"></div>
-    <div class="button green"></div>
+    <div class="button yellow">
+      <i class="fa-solid fa-minus white"></i>
+    </div>
+    <div class="button green">
+      <i class="fa-regular fa-square white"></i>
+    </div>
+    <div class="button red">
+      <i class="fa-solid fa-circle-xmark insta"></i>
+    </div>
   </header>
   <div id="terminal">
     <p><strong class="green">\[._.]/</strong> - you're in abdul's cli! type `help` to get started.</p>
