--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
       </div>
     </nav>
     
-    <div class="w3-container" id="rightcol">
-      <span class="w3-opennav w3-xlarge w3-hide-large" onclick="w3_open()">&#9776;</span>
+    <div class="" id="rightcol">
+      <span class="w3-opennav w3-xxlarge w3-hide-large" onclick="w3_open()">&#9776;</span>
       <div class="content">
 
       </div>
