--- a/pages/pretty_about.html
+++ b/pages/pretty_about.html
@@ -3,14 +3,14 @@
      <img class="profile-image" src="data/hi.png" alt="Abdul Logo">
 
      <div class="self-name" >
-        My name is <strong>Abdul Noushad Sheikh</strong> ,<br>
-      I'm a <span class="">Software Developer!</span>
+        My name is <strong class="name">Abdul Noushad Sheikh</strong>,<br>
+      I'm a <span class="title">Software Developer!</span>
    </div>
   </div>
 
   <ul class="about-ul">
      <li style="list-style: '🖥'" class="about-li">I work for <strong>Amdocs</strong> as a business intelligence developer in Pune, India</li>
-     <li style="list-style: '🎯'" class="about-li"> I learn any and everything that happens to come my way and I love building amazing softwares and solutions that solve real life problems.</li>
+     <li style="list-style: '🎯'" class="about-li"> I learn any and everything that happens to come my way and I building softwares that solve real life problems.</li>
      <li style="list-style: '🚀'" class="about-li"> In my free time I automate and reverse engineer things around me. </li>
      <li style="list-style: '🧩'" class="about-li"> When I am not coding I like to do gym, hangout with friends, and play graphics intensive video games.</li>
   </ul>
