--- a/pages/pretty_edu.html
+++ b/pages/pretty_edu.html
@@ -2,10 +2,10 @@
   <div class="">
      <strong class="edu-title">Education</strong>
   </div>
-  <ul class="">
+  <ul class="edu-ul">
      <li class="edu-li">
         <div class="title">
-           <strong>Savitribai Phule Pune University - SPPU</strong>
+           <strong>Pune University - SPPU</strong>
         </div>
         <div class="year">
            <strong>2015 - 2019</strong>
