--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       <p><strong class="green">\[._.]/</strong> - Back flipped.</p>
     </div> -->
 
-    <nav class="w3-sidenav w3-collapse " id="leftcol">
+    <nav class="w3-sidenav w3-collapse w3-animate-left " id="leftcol">
       <div class="leftcolTab active">
         <i class="fa-solid fa-user icon"></i>
         <div class="name">About</div>
@@ -136,7 +136,7 @@
     </nav>
     
     <div class="" id="rightcol">
-      <span class="w3-opennav w3-xxlarge w3-hide-large" onclick="w3_open()">&#9776;</span>
+      <span class="w3-opennav w3-hide-large" onclick="w3_open()">&#9776;</span>
       <div class="content">
 
       </div>
