added bg and some ui fixes

--- a/index.html
+++ b/index.html
@@ -148,11 +148,14 @@
 
 <div class="footer">
   <p> Made with ❤️ & ☕</p>
-  <p> Inspired by Ubuntu Terminal 
-    <i class="devicon-linux-plain" style="font-size: 20;"></i>
+  <p> Inspired by <strong>Ubuntu</strong> 
+    <i class="devicon-linux-plain"></i>
   </p>
-  <br>
-  <p>For pretty website <a class="site-code flip-btn">click here</a></p>
+  <p >
+    For 
+    <span class="flip-text">GUI</span> 
+    <strong class="flip-btn">click here</strong>
+  </p>
 </div>
 
 <script type="text/javascript" src="js/loginInfo.js"></script>
