removed w3 css and made manual style fixes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Abdul's CLI</title>
-  <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
   <link rel="stylesheet/less" type="text/css" href="styles/main.less" />
   <link rel="stylesheet/less" type="text/css" href="styles/flip.less" />
   <link rel="stylesheet/less" type="text/css" href="styles/prettyUI.less" />
@@ -108,7 +107,7 @@
       <p><strong class="green">\[._.]/</strong> - Back flipped.</p>
     </div> -->
 
-    <nav class="w3-sidenav w3-collapse w3-animate-left " id="leftcol">
+    <nav class=" " id="leftcol">
       <div class="leftcolTab active">
         <i class="fa-solid fa-user icon"></i>
         <div class="name">About</div>
@@ -136,7 +135,7 @@
     </nav>
     
     <div class="" id="rightcol">
-      <span class="w3-opennav w3-hide-large" onclick="w3_open()">&#9776;</span>
+      <span class="nav-opener" onclick="openSlider()">&#9776;</span>
       <div class="content">
 
       </div>
