--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 
   <div class="terminal-window front">
     <header>
+      <div class="header-title">Abdul's CLI - Terminal</div>
       <div class="button yellow">
         <i class="fa-solid fa-minus white"></i>
       </div>
@@ -92,6 +93,7 @@
 
   <div class="terminal-window back">
     <header>
+      <div class="header-title">Abdul's GUI</div>
       <div class="button yellow">
         <i class="fa-solid fa-minus white"></i>
       </div>
@@ -153,7 +155,7 @@
   <p >
     For 
     <span class="flip-text">GUI</span> 
-    <strong class="flip-btn">click here</strong>
+    <strong class="flip-btn" onclick="flipWindow()">click here</strong>
   </p>
 </div>
 
