skills page content added

--- a/pages/pretty_about.html
+++ b/pages/pretty_about.html
@@ -8,8 +8,14 @@
    </div>
   </div>
 
+  <svg height="30" class="svg-line" width="100%">
+   <line stroke="white" x1="40%" y1="20" y2="20" x2="60%"></line>
+   <circle fill="white" cx="40%" cy="20" r="3"></circle>
+   <circle fill="white" cx="60%" cy="20" r="3"></circle>
+   </svg>
+
   <ul class="about-ul">
-     <li style="list-style: '🖥'" class="about-li">I work for <strong>Amdocs</strong> as a business intelligence developer in Pune, India</li>
+     <li style="list-style: '🖥'" class="about-li">I work for <strong>Amdocs</strong> as a business intelligence developer in Pune, India.</li>
      <li style="list-style: '🎯'" class="about-li"> I learn any and everything that happens to come my way and I building softwares that solve real life problems.</li>
      <li style="list-style: '🚀'" class="about-li"> In my free time I automate and reverse engineer things around me. </li>
      <li style="list-style: '🧩'" class="about-li"> When I am not coding I like to do gym, hangout with friends, and play graphics intensive video games.</li>
