--- a/pages/pretty_edu.html
+++ b/pages/pretty_edu.html
@@ -1,6 +1,6 @@
 <div class="">
   <div class="">
-     <strong class="edu-title">Education</strong>
+     <strong class="head-title">Education</strong>
   </div>
   <ul class="edu-ul">
      <li class="edu-li">
