--- a/pages/pretty_edu.html
+++ b/pages/pretty_edu.html
@@ -2,6 +2,13 @@
   <div class="">
      <strong class="head-title">Education</strong>
   </div>
+  
+   <svg height="30" class="svg-line" width="100%">
+      <line stroke="white" x1="40%" y1="10" y2="10" x2="60%"></line>
+      <circle fill="white" cx="40%" cy="10" r="3"></circle>
+      <circle fill="white" cx="60%" cy="10" r="3"></circle>
+   </svg>
+ 
   <ul class="edu-ul">
      <li class="edu-li">
         <div class="title">
