--- a/pages/pretty_exp.html
+++ b/pages/pretty_exp.html
@@ -2,5 +2,12 @@
   <div class="">
      <strong class="head-title">Experience</strong>
   </div>
-  
+
+  <svg height="30" class="svg-line" width="100%">
+    <line stroke="white" x1="40%" y1="10" y2="10" x2="60%"></line>
+    <circle fill="white" cx="40%" cy="10" r="3"></circle>
+    <circle fill="white" cx="60%" cy="10" r="3"></circle>
+ </svg>
+
+ 
 </div>
