--- a/pages/pretty_skills.html
+++ b/pages/pretty_skills.html
@@ -7,16 +7,17 @@
     <line stroke="white" x1="40%" y1="10" y2="10" x2="60%"></line>
     <circle fill="white" cx="40%" cy="10" r="3"></circle>
     <circle fill="white" cx="60%" cy="10" r="3"></circle>
-    </svg>
+  </svg>
  
    <ul class="about-ul">
       <li  class="about-li">I find my expertise in vast veriety of programming languages and frameworks.</li>
-      <li class="about-li">"Debugger baba", earned this title while working at Amdocs. When my team is debugging, I am the guy they remember.</li>
-      <li class="about-li">Some of the tech stack that I have frequntly used in the recent past:<br><br>
+      <li class="about-li">Debugging!? I hate debugging and that's why I tend to do it in as less time as possible.</li>
+      <li class="about-li">I also love working in and making use of, most of the cloud services that help me create programs and solution faster.</li>
+      <li class="about-li">Some of the tech stack that I have frequntly used are,<br><br>
         <div class="tech-container">
 
           <div class="tech-lang">
-            <strong>Languages:</strong><br><br>
+            <strong>Languages & Tools:</strong><br><br>
             <i class="big devicon-python-plain-wordmark colored"></i>
             <i class="big devicon-java-plain-wordmark colored"></i>
             <i class="big devicon-javascript-plain colored"></i>
@@ -24,27 +25,30 @@
             <i class="big devicon-html5-plain-wordmark colored"></i>
             <i class="big devicon-php-plain colored"></i>
             <i class="big devicon-cplusplus-line-wordmark"></i>
+            <i class="big devicon-jetbrains-plain colored"></i>
+            <i class="big devicon-git-plain-wordmark colored"></i>
+            <i class="big devicon-vscode-plain-wordmark colored"></i>
+            <i class="big devicon-ubuntu-plain-wordmark colored"></i>
+            <i class="big devicon-atom-original colored"></i>
+            <i class="big devicon-github-original-wordmark"></i>
 
           </div>
-      
+          <br><br>
           <div class="tech-framework">
-            <strong>Frameworks:</strong><br><br>
+            <strong>Frameworks & Services:</strong><br><br>
             <i class="big devicon-amazonwebservices-plain-wordmark colored"></i>
             <i class="big devicon-angularjs-plain colored"></i>
             <i class="big devicon-apache-line-wordmark"></i>
             <i class="big devicon-docker-plain-wordmark colored"></i>
-            <i class="big devicon-django-plain-wordmark colored"></i>
+            <i class="big devicon-django-line-wordmark"></i>
             <i class="big devicon-express-original colored"></i>
-            <i class="big devicon-git-plain-wordmark colored"></i>
-            <i class="big devicon-jira-plain-wordmark colored"></i>
             <i class="big devicon-jquery-plain-wordmark colored"></i>
             <i class="big devicon-less-plain-wordmark colored"></i>
             <i class="big devicon-nginx-plain-wordmark colored"></i>
             <i class="big devicon-react-original-wordmark colored"></i>
-            <i class="big devicon-slack-plain colored"></i>
             <i class="big devicon-tomcat-line-wordmark colored"></i>
-            <i class="big devicon-ubuntu-plain-wordmark colored"></i>
-            <i class="big devicon-vscode-plain-wordmark colored"></i>
+            <i class="big devicon-azure-plain colored"></i>
+            <i class="big devicon-firebase-plain-wordmark colored"></i>
           </div>
         
       </div>
