Added exp, resume page and license

--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
         <i class="fa-solid fa-building icon"></i>
         <div class="name">Experience</div>
       </div>
-      <div class="leftcolTab">
+      <!-- <div class="leftcolTab">
         <i class="fa-solid fa-diagram-project icon"></i>
         <div class="name">Projects</div>
-      </div>	
+      </div>	 -->
       <div class="leftcolTab">
         <i class="fa-solid fa-address-card icon"></i>
         <div class="name">Resume</div>
@@ -156,6 +156,9 @@
     For 
     <span class="flip-text">GUI</span> 
     <strong class="flip-btn" onclick="flipWindow()">click here</strong>
+  </p>
+  <p class="copyright">
+    <strong>© Abdul Noushad Sheikh 2022</strong>
   </p>
 </div>
 
