--- a/pages/pretty_resume.html
+++ b/pages/pretty_resume.html
@@ -4,10 +4,14 @@
   </div>
 
   <svg height="30" class="svg-line" width="100%">
-    <line stroke="white" x1="40%" y1="10" y2="10" x2="60%"></line>
-    <circle fill="white" cx="40%" cy="10" r="3"></circle>
-    <circle fill="white" cx="60%" cy="10" r="3"></circle>
+    <line stroke="white" x1="35%" y1="10" y2="10" x2="65%"></line>
+    <circle fill="white" cx="35%" cy="10" r="3"></circle>
+    <circle fill="white" cx="65%" cy="10" r="3"></circle>
  </svg>
 
+
+<p class="helptext">Please maximize the window for best view.</p>
+
+ <iframe src="data/Resume_Dec_2021.pdf" class="resume-frame"></iframe>
  
 </div>
