--- a/pages/pretty_skills.html
+++ b/pages/pretty_skills.html
@@ -4,9 +4,9 @@
   </div>
   
   <svg height="30" class="svg-line" width="100%">
-    <line stroke="white" x1="40%" y1="10" y2="10" x2="60%"></line>
-    <circle fill="white" cx="40%" cy="10" r="3"></circle>
-    <circle fill="white" cx="60%" cy="10" r="3"></circle>
+    <line stroke="white" x1="35%" y1="10" y2="10" x2="65%"></line>
+    <circle fill="white" cx="35%" cy="10" r="3"></circle>
+    <circle fill="white" cx="65%" cy="10" r="3"></circle>
   </svg>
  
    <ul class="about-ul">
@@ -27,7 +27,7 @@
             <i class="big devicon-cplusplus-line-wordmark"></i>
             <i class="big devicon-jetbrains-plain colored"></i>
             <i class="big devicon-git-plain-wordmark colored"></i>
-            <i class="big devicon-vscode-plain-wordmark colored"></i>
+            <i class="big devicon-vscode-plain colored"></i>
             <i class="big devicon-ubuntu-plain-wordmark colored"></i>
             <i class="big devicon-atom-original colored"></i>
             <i class="big devicon-github-original-wordmark"></i>
@@ -50,8 +50,7 @@
             <i class="big devicon-azure-plain colored"></i>
             <i class="big devicon-firebase-plain-wordmark colored"></i>
           </div>
-        
-      </div>
+        </div>
       </li>
    </ul>
 </div>
