--- a/pages/about.html
+++ b/pages/about.html
@@ -1,5 +1,5 @@
 <p>
-  I am a resilient, innovative, and passionate student of life, I build solutions to real-life problems and contribute to open-source. <br><br>
-  I do Fullstack software developement and cloud engineering. I learn any and everything that happens to come my way. In my free time I automate things around me. 💻 <br><br>
+  I am a resilient, innovative, and passionate student of life, I build solution to real-life problems and contribute to open-source. <br><br>
+  I do fullstack software developement and cloud engineering. I learn any and everything that happens to come my way. In my free time I automate things around me. 💻 <br><br>
   I work at Amdocs, Pune for AT&T networks on cloud modernization; containerizing AT&T software bit by bit. 😄
 </p>
