--- a/pages/pretty_resume.html
+++ b/pages/pretty_resume.html
@@ -12,6 +12,7 @@
 
 <p class="helptext">Please maximize the window for best view.</p>
 
- <iframe src="data/Resume_Dec_2021.pdf" class="resume-frame"></iframe>
- 
+ <!-- <iframe src="data/Resume_Dec_2021.pdf" class="resume-frame"></iframe> -->
+ <iframe src="https://docs.google.com/viewer?url=https://abdul.co.in/data/Resume_Dec_2021.pdf&embedded=true" 
+ frameborder="0" class="resume-frame"></iframe>
 </div>
