--- a/pages/pretty_skills.html
+++ b/pages/pretty_skills.html
@@ -10,10 +10,10 @@
   </svg>
  
    <ul class="about-ul">
-      <li  class="about-li">I find my expertise in vast veriety of programming languages and frameworks.</li>
+      <li  class="about-li">I find my expertise in vast variety of programming languages and frameworks.</li>
       <li class="about-li">Debugging!? I hate debugging and that's why I tend to do it in as less time as possible.</li>
-      <li class="about-li">I also love working in and making use of, most of the cloud services that help me create programs and solution faster.</li>
-      <li class="about-li">Some of the tech stack that I have frequntly used are,<br><br>
+      <li class="about-li">I also love working on and making use of, most of the cloud services that help me create programs and solution faster.</li>
+      <li class="about-li">Some of the tech stack that I have frequently used are,<br><br>
         <div class="tech-container">
 
           <div class="tech-lang">
