minor fixes in flip and sudo image style

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Abdul's CLI</title>
+  <title>Abdul's CLI - Terminal</title>
   <link rel="stylesheet/less" type="text/css" href="styles/main.less" />
   <link rel="stylesheet/less" type="text/css" href="styles/flip.less" />
   <link rel="stylesheet/less" type="text/css" href="styles/prettyUI.less" />
@@ -21,7 +21,7 @@
       // console.log("Hi");
         $("#card").flip({
             trigger: 'manual',
-            speed: 300,
+            speed: 2000,
         });
     });
 
@@ -40,11 +40,11 @@
   <meta content="black-translucent" name="apple-mobile-web-app-status-bar-style">
   <link href="favicon.ico" rel="shortcut icon">
   <meta content="https://avatars.githubusercontent.com/u/17446181" property="og:image">
-  <meta content="Abdul's CLI" property="og:title">
+  <meta content="Abdul Noushad Sheikh" property="og:title">
   <meta content="abdul.co.in" property="og:site_name">
-  <meta content="http://www.abdul.co.in/" property="og:url">
-  <meta content="Abdul's Command Line Interface">
-  <meta content="Abdul's Command Line Interface">
+  <meta content="http://abdul.co.in/" property="og:url">
+  <meta content="Abdul's Ubuntu Website with CLI and GUI" property="og:description" >
+  <meta content="Abdul's Ubuntu Website with CLI and GUI">
   <meta content="Abdul Noushad Sheikh"name="author">
   <meta content="Abdul Noushad Sheikh" name="copyright">
   <!-- Meta tags end -->
