Added contact page in gui

--- a/index.html
+++ b/index.html
@@ -144,8 +144,12 @@
         <div class="name">Projects</div>
       </div>	 -->
       <div class="leftcolTab">
-        <i class="fa-solid fa-address-card icon"></i>
+        <i class="fa-solid fa-file-pdf icon"></i>
         <div class="name">Resume</div>
+      </div>
+      <div class="leftcolTab">
+        <i class="fa-solid fa-address-card icon"></i>
+        <div class="name">Contact</div>
       </div>
     </nav>
     
