--- a/pages/pretty_resume.html
+++ b/pages/pretty_resume.html
@@ -15,4 +15,7 @@
  <!-- <iframe src="data/Resume_Dec_2021.pdf" class="resume-frame"></iframe> -->
  <iframe src="https://docs.google.com/viewer?url=https://abdul.co.in/data/Resume_Dec_2021.pdf&embedded=true" 
  frameborder="0" class="resume-frame"></iframe>
+
+
+ <p class="helptext" style="margin-top: 40px;" >If you cannot view the pdf above click <a href="data/Resume_Dec_2021.pdf" style="display: inline;" class="title-link" target='_blank'>here</a> to download the file.</p>
 </div>
