added fab for flip

--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
         <span contenteditable="true" spellcheck="false" autocomplete="off" autocorrect="off" class="input"> </span>
       </p>
     </div>
+
+    <div class="fabFlip">
+      <img class="flip-img" onclick="flipWindow()" src="data/gui.png"/>
+      </div>
   </div>
 
   <div class="terminal-window back">
@@ -160,6 +164,9 @@
       </div>
     </div>
 
+    <div class="fabFlip">
+      <img class="flip-img" onclick="flipWindow()" src="data/cli.png"/>
+      </div>
   </div>
 
 </div>
