--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
     </div>
 
     <div class="fabFlip">
-      <img class="flip-img" onclick="flipWindow()" src="data/gui.png"/>
+      <i class="fa-solid fa-rotate flip-img" onclick="flipWindow()"></i>
       </div>
   </div>
 
@@ -165,7 +165,7 @@
     </div>
 
     <div class="fabFlip">
-      <img class="flip-img" onclick="flipWindow()" src="data/cli.png"/>
+      <i class="fa-solid fa-rotate flip-img" onclick="flipWindow()"></i>
       </div>
   </div>
 
