info text updated

--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
       </div>
     </header>
     <div id="terminal">
-      <p><strong class="green">\[._.]/</strong> - you're in abdul's cli! type `help` to get started.</p>
+      <p><strong class="green" style="line-height: 1.7;">
+        \[._.]/</strong> - you're in abdul's cli! type `help` to get started.<br> 🖥️ </strong> - for graphical interface click <i class="fa-solid fa-rotate"></i> on the bottom right.
+      </p>
       <div class="loginInfo"></div>
       <p class="hidden">
         <span class="prompt">
@@ -176,11 +178,11 @@
   <p> Inspired by <strong>Ubuntu</strong> 
     <i class="devicon-linux-plain"></i>
   </p>
-  <p >
+  <!-- <p >
     For 
     <span class="flip-text">GUI</span> 
     <strong class="flip-btn" onclick="flipWindow()">click here</strong>
-  </p>
+  </p> -->
   <p class="copyright">
     <strong>© Abdul Noushad Sheikh 2022</strong>
   </p>
