--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </header>
     <div id="terminal">
       <p><strong class="green" style="line-height: 1.7;">
-        \[._.]/</strong> - you're in abdul's cli! type `help` to get started.<br> 🖥️ </strong> - for graphical interface click <i class="fa-solid fa-rotate"></i> on the bottom right.
+        \[._.]/</strong> - you're in abdul's cli! type `help` to get started, or click <i class="fa-solid fa-repeat"></i> on the bottom right for graphical interface.
       </p>
       <div class="loginInfo"></div>
       <p class="hidden">
@@ -104,10 +104,6 @@
         <span contenteditable="true" spellcheck="false" autocomplete="off" autocorrect="off" class="input"> </span>
       </p>
     </div>
-
-    <div class="fabFlip">
-      <i class="fa-solid fa-rotate flip-img" onclick="flipWindow()"></i>
-      </div>
   </div>
 
   <div class="terminal-window back">
@@ -165,12 +161,11 @@
 
       </div>
     </div>
-
-    <div class="fabFlip">
-      <i class="fa-solid fa-rotate flip-img" onclick="flipWindow()"></i>
-      </div>
   </div>
+</div>
 
+<div class="fabFlip">
+  <i class="fa-solid fa-repeat flip-img" onclick="flipWindow()"></i>
 </div>
 
 <div class="footer">
